migrate all tests to junit5